--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://rfolco.github.io/react-complete-guide",
+  "homepage": "https://rfolco.github.io/react-complete-guide",
   "name": "react-complete-guide",
   "version": "0.1.0",
   "private": true,
