project name changed

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "https://rfolco.github.io/react-complete-guide",
-  "name": "react-complete-guide",
+  "homepage": "https://rfolco.github.io/ExpenseTracker",
+  "name": "ExpenseTracker",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
